@@ -1,5 +1,5 @@
 Package: EpiModel
-Version: 1.0.2.237
+Version: 1.0.2.238
 Date: 2014-09-11
 Title: Mathematical Modeling of Infectious Disease
 Description: Tools for simulating mathematical models of infectious disease.
